# python-varname

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .tagitrc  .travis.yml  404.html  LICENSE  README.md  README.raw.md  README.rst  index.html  make_readme.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tox.ini  varname.py
.codesandbox/: Dockerfile
.github/workflows/: build.yml  checks.yml  docs.yml
CHANGELOG/: index.html
api/source/varname/: index.html
api/source/varname.core/: index.html
api/source/varname.helpers/: index.html
api/source/varname.ignore/: index.html
api/source/varname.utils/: index.html
api/varname/: index.html
api/varname.core/: index.html
api/varname.helpers/: index.html
api/varname.ignore/: index.html
api/varname.utils/: index.html
docs/: CHANGELOG.md  api.css  requirements.txt  style.css
docs/api/: varname.md
docs/api/source/: varname.md
js/: mkapi.js
playground/: module_all_calls.py  module_dual_qualnames.py  module_glob_qualname.py  playground.ipynb
search/: search_index.json
tests/: conftest.py  named_expr.py  test_argname.py  test_bytecode_nameof.py  test_helpers.py  test_nameof.py  test_varname.py  test_will.py
varname/: __init__.py  core.py  helpers.py  ignore.py  utils.py  varname.py
