[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "varname"
version = "0.13.4"
description = "Dark magics about variable names in python."
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/python-varname"
repository = "https://github.com/pwwang/python-varname"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8"
executing = "^2.0"
asttokens = { version = "2.*", optional = true }
pure_eval = { version = "0.*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-cov = "^5"
coverage = { version = "^7", extras = ["toml"] }

[tool.poetry.extras]
all = ["asttokens", "pure_eval"]

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio -W error::UserWarning --cov-config=.coveragerc --cov=varname --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
