[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "varname"
version = "0.15.1"
description = "Dark magics about variable names in python."
authors = [
    {name = "pwwang", email = "pwwang@pwwang.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "executing>=2.1",
    "typing_extensions>=4.13; python_version < '3.10'",
]

[project.optional-dependencies]
all = ["asttokens==3.*", "pure_eval==0.*"]

[project.urls]
Homepage = "https://github.com/pwwang/python-varname"
Repository = "https://github.com/pwwang/python-varname"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "ipykernel>=6.29.5",
    "flake8>=5.0.4",
    "mypy>=1.14.1",
]
docs = [
    "mkapi-fix>=0.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.15",
]

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio -W error::UserWarning --cov-config=.coveragerc --cov=varname --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
